Bug 875227 - No call sound when the call established, r=mwu